--- a/src/assets/css/_po.scss
+++ b/src/assets/css/_po.scss
@@ -296,6 +296,9 @@
   margin-right: 30px;
   &-result {
     font-weight: 500;
+    &-discount {
+      color: #E24343;
+    }
   }
 }
 .modal-product-list {
