--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -864,8 +864,8 @@
     margin-right: 8px;
     width: 18px;
     height: 18px;
-    filter: invert(15%) sepia(39%) saturate(4137%) hue-rotate(231deg)
-      brightness(96%) contrast(100%);
+    filter: invert(15%) sepia(39%) saturate(2000%) hue-rotate(200deg)
+      brightness(66%) contrast(100%);
   }
   span {
     height: 18px;
@@ -904,6 +904,13 @@
   border: 1px solid #2a2a86;
   span {
     color: #2a2a86;
+  }
+  img {
+    margin-right: 8px;
+    width: 18px;
+    height: 18px;
+    filter: invert(15%) sepia(39%) saturate(2000%) hue-rotate(200deg)
+      brightness(66%) contrast(100%);
   }
 }
 // shipment đơn hàng
@@ -972,29 +979,49 @@
 }
 
 .saleorder-modal-config {
-  button {
-    &:nth-child(1) {
-      height: 38px;
-      border-radius: 3px;
-    }
-    &:nth-child(2) {
-      width: 98px;
-      height: 38px;
-      border-radius: 3px;
+  .ant-modal-header {
+    padding: 27px 27.5px 21px 30px;
+  }
+  .ant-modal-title {
+    & > div {
+      display: flex;
+      div{
+      margin-left: 25px;
+      padding: 12px 0;
+      h4 {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 16px;
+      }
+      span {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 16px;
+      }
+      }
+      
     }
   }
-  div {
-    &:nth-child(1) {
-      font-style: normal;
-      font-weight: bold;
-      font-size: 18px;
-      line-height: 16px;
-    }
+  .ant-modal-body {
+    padding: 0;
   }
   .ant-modal-footer {
     box-shadow: none;
     border: none;
-    padding: 0 34px 26px 0;
+    padding: 15px 27.5px 16px 30px;
+  }
+  .ant-btn {
+    border-radius: 3px;
+    margin-left: 10px;
+  }
+  .ant-modal-footer .ant-btn + .ant-btn:not(.ant-dropdown-trigger) {
+    margin-left: 10px;
+    font-size: 14px;
+    font-weight: normal;
   }
 }
 
@@ -1011,18 +1038,18 @@
 }
 //custom radio
 .create-order-payment {
-  .order-cod-payment-footer{
+  .order-cod-payment-footer {
     border-radius: 5px;
     border: 1px solid #2a2a86;
     height: 54px;
     padding: 17px 19px;
-    background-color: #F8F8FF;
-    &>span{
+    background-color: #f8f8ff;
+    & > span {
       size: 14px;
-      line-height:18px;
+      line-height: 18px;
       letter-spacing: 0.2px;
       color: #2a2a86;
-      span{
+      span {
         font-weight: 500;
       }
     }
