--- a/src/assets/css/_po.scss
+++ b/src/assets/css/_po.scss
@@ -218,6 +218,7 @@
     font-size: 14px;
     border-radius: 5px;
     color: #737373;
+    text-align: right;
     background-color: $white;
     width: 100%;
     &:focus, &:active, &:hover  {
