--- a/src/assets/css/_po.scss
+++ b/src/assets/css/_po.scss
@@ -1,6 +1,7 @@
 .supplier {
   padding: 0;
-  .ant-select-item, .ant-select-item:focus{
+  .ant-select-item,
+  .ant-select-item:focus {
     padding: 0px;
     height: auto;
     .supplier-item {
@@ -8,8 +9,8 @@
       flex-direction: row;
       align-items: center;
       padding: 6px 12px;
-      background: #FFFFFF;
-      border-bottom: 1px solid #F5F5F5;
+      background: #ffffff;
+      border-bottom: 1px solid #f5f5f5;
 
       &-title {
         margin-left: 10px;
@@ -26,7 +27,7 @@
         color: #737373;
       }
       &:hover {
-        background-color:  #F7F7FF;
+        background-color: #f7f7ff;
       }
     }
   }
@@ -46,7 +47,7 @@
           display: flex;
           align-items: center;
         }
-        &-delete{
+        &-delete {
           display: flex;
           width: 30px;
           height: 30px;
@@ -59,7 +60,7 @@
           border: none;
           margin-left: 20px;
           &:hover {
-            background-color: rgba($primary-color, .15)
+            background-color: rgba($primary-color, 0.15);
           }
         }
       }
@@ -75,7 +76,7 @@
       .su-title {
         font-weight: 400;
         font-size: 14px;
-        color:#737373;
+        color: #737373;
       }
     }
   }
@@ -86,7 +87,6 @@
   .ant-select-item {
     padding: 0px;
     height: auto;
-    
   }
   .ant-checkbox-wrapper {
     margin-right: 10px;
@@ -96,8 +96,8 @@
     flex-direction: row;
     align-items: center;
     padding: 6px 12px;
-    background: #FFFFFF;
-    border-bottom: 1px solid #F5F5F5;
+    background: #ffffff;
+    border-bottom: 1px solid #f5f5f5;
     &-image {
       display: flex;
       align-items: center;
@@ -151,29 +151,25 @@
         line-height: 14px;
         color: #737373;
       }
-    } 
+    }
     &-inventory {
       font-size: 12px;
       line-height: 18px;
       .value {
-        color:  $primary-color;
+        color: $primary-color;
       }
     }
     &:hover {
-      background-color:  #F7F7FF;
+      background-color: #f7f7ff;
     }
   }
 }
 
 .product-table {
-  .product-table-row {
-    .ant-table-cell {
-      padding: 10px 5px !important;
-    }
-  }
-  .ant-col-info:hover {
-    .product-item-note {
-      display: inline-block;
+  .ant-table-cell {
+    padding: 10px 5px !important;
+    .ant-table-expanded-row-fixed { 
+      margin: -10px !important
     }
   }
   .product-item-note-input {
@@ -202,29 +198,51 @@
     color: $primary-color;
   }
   .product-item-name {
+    display: flex;
+    align-items: center;
     font-size: 12px;
-    line-height: 18px;
-    color:  #666666;
+    color: #666666;
     margin-top: 5px;
     width: 100%;
-    white-space: nowrap; 
-    overflow: hidden;
-    text-overflow: ellipsis;
+    height: 25px;
+    &-detail {
+      max-width: 100%;
+      white-space: nowrap;
+      overflow: hidden;
+      line-height: 18px;
+      margin-right: 5px;
+      text-overflow: ellipsis;
+    }
+    &-note {
+      padding: 0;
+      height: auto;
+      font-size: 12px;
+      font-weight: normal;
+      margin-left: 5px;
+      line-height: 18px;
+      margin: 0;
+    }
+    &:hover {
+      .product-item-note {
+        display: inline-block;
+      }
+    }
   }
   .product-item-price {
     height: 38px;
     padding: 7px 14px;
-    border-color: #DFDFDF;
+    border-color: #dfdfdf;
     font-size: 14px;
     border-radius: 5px;
     color: #737373;
     text-align: right;
     background-color: $white;
     width: 100%;
-    &:focus, &:active, &:hover  {
+    &:focus,
+    &:active,
+    &:hover {
       background-color: $white;
-    border-color: #DFDFDF;
-
+      border-color: #dfdfdf;
     }
   }
   .product-item-delete {
@@ -240,7 +258,7 @@
     color: #222222;
     box-shadow: none;
     &:hover {
-      background-color: rgba($primary-color, .15)
+      background-color: rgba($primary-color, 0.15);
     }
   }
   .product-item-vat {
@@ -254,7 +272,7 @@
         display: flex;
         height: 100%;
         width: 30px;
-        background-color: #F5F5F5;
+        background-color: #f5f5f5;
         border-radius: 5px;
         text-align: center;
         display: flex;
@@ -279,7 +297,7 @@
     .ant-select-selector {
       border-top-left-radius: 5px !important;
       border-bottom-left-radius: 5px !important;
-      background-color: #F5F5F5 !important;
+      background-color: #f5f5f5 !important;
     }
   }
   &-input {
@@ -299,7 +317,7 @@
   &-result {
     font-weight: 500;
     &-discount {
-      color: #E24343;
+      color: #e24343;
     }
   }
   &-title {
@@ -308,7 +326,7 @@
     color: #222222;
   }
   &-success {
-    color: $primary-color
+    color: $primary-color;
   }
 }
 .modal-product-list {
