--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -297,6 +297,11 @@
     cursor: pointer;
     color: #2a2a86;
   }
+  .ant-tag{
+    font-size: 12px;
+    font-weight: 500;
+    margin-top: 0px;
+  }
   .custom-select-suffix {
     .ant-btn-icon-only {
       background-color: rgba($primary-color, 0.1);
