--- a/src/assets/css/_page-header.scss
+++ b/src/assets/css/_page-header.scss
@@ -13,7 +13,8 @@
 
     &-title{
       font-size: 20px;
-      margin-bottom: 0;
+      margin-bottom: 4px;
+      font-weight: bold;
     }
 
     &-left{
