--- a/src/assets/css/_table.scss
+++ b/src/assets/css/_table.scss
@@ -122,6 +122,7 @@
     }
     &__showTotal {
       color: #000;
+      font-weight: 500;
     }
     .ant-pagination-next, 
     .ant-pagination-prev {
