--- a/src/assets/css/_overwrite.scss
+++ b/src/assets/css/_overwrite.scss
@@ -224,7 +224,8 @@
     }
     &-content {
       padding: 0 30px;
-      margin-top: 55px;
+      padding-top: 55px;
+      padding-bottom: 55px;
     }
   }
   &-badge-count {
