--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -1183,6 +1183,62 @@
     > .ant-collapse-header {
     padding-left: 0;
   }
+  .ant-table-tbody{
+    tr{
+      td{
+        &:nth-child(2){
+          .radio-container {
+            cursor: pointer;
+            display: block;
+            position: relative;
+            padding-left: 30px;
+            cursor: pointer;
+            font-size: 14px;
+            color: #222222;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            margin-left: 27px;
+          }
+          
+          .radio-container input {
+            position: absolute;
+            opacity: 0;
+            cursor: pointer;
+          }
+          .checkmark {
+            position: absolute;
+            top: 1px;
+            left: 0;
+            height: 18px;
+            width: 18px;
+            border-radius: 50%;
+            border: 1px solid #2a2a86
+          }
+          .radio-container input:checked ~ .checkmark {
+            border: 1px solid #2a2a86
+          } 
+          .checkmark:after {
+            content: "";
+            position: absolute;
+            display: none;
+          }
+          .radio-container input:checked ~ .checkmark:after {
+            display: block;
+          }
+          .radio-container .checkmark:after {
+            top: 3px;
+            left: 3px;
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            background: #2a2a86;
+          }
+        }
+      }
+    }
+  }
 }
 
 .custom-css-collapse > .ant-collapse-header {
@@ -1334,6 +1390,7 @@
         .radio-container input {
           position: absolute;
           opacity: 0;
+          cursor: pointer;
         }
         .checkmark {
           position: absolute;
