--- a/src/assets/css/_table.scss
+++ b/src/assets/css/_table.scss
@@ -1,26 +1,27 @@
 .custom-table {
   margin-bottom: 0;
-  .ant-pagination-item, .ant-pagination-total-text {
+  .ant-pagination-item,
+  .ant-pagination-total-text {
     margin-right: 3px;
   }
   .ant-table.ant-table-middle {
     .ant-table-thead {
-      background: #F5F5F5;
+      background: #f5f5f5;
       box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.1);
-      >tr>th {
+      > tr > th {
         padding: 11px 15px;
         background: none;
         color: #222;
       }
     }
-    .ant-table-tbody>tr>td {
+    .ant-table-tbody > tr > td {
       padding: 21px 15px;
     }
   }
-  // .ant-table.ant-table-middle .ant-table-footer, 
-  // .ant-table.ant-table-middle .ant-table-tbody>tr>td, 
-  // .ant-table.ant-table-middle .ant-table-thead>tr>th, 
-  // .ant-table.ant-table-middle .ant-table-title, .ant-table.ant-table-middle tfoot>tr>td, 
+  // .ant-table.ant-table-middle .ant-table-footer,
+  // .ant-table.ant-table-middle .ant-table-tbody>tr>td,
+  // .ant-table.ant-table-middle .ant-table-thead>tr>th,
+  // .ant-table.ant-table-middle .ant-table-title, .ant-table.ant-table-middle tfoot>tr>td,
   // .ant-table.ant-table-middle tfoot>tr>th {
   //   padding: 21px 8px;
   // }
@@ -54,6 +55,7 @@
         transition: 0.3s ease;
       }
       .ant-select-selection-item {
+        font-weight: bold;
         transition: none;
       }
     }
@@ -80,8 +82,8 @@
           }
         }
         &.ant-pagination-disabled {
-          background: #F5F5F5;
-          color: #9E9E9E;
+          background: #f5f5f5;
+          color: #9e9e9e;
         }
       }
       .ant-pagination-jump-next,
@@ -109,7 +111,7 @@
         .ant-pagination-item-link {
           padding: 0 10px;
         }
-        span[role='img'] {
+        span[role="img"] {
           position: relative;
           top: 1px;
         }
@@ -124,7 +126,7 @@
       color: #000;
       font-weight: 500;
     }
-    .ant-pagination-next, 
+    .ant-pagination-next,
     .ant-pagination-prev {
       display: none;
     }
