--- a/src/assets/css/_po.scss
+++ b/src/assets/css/_po.scss
@@ -168,8 +168,8 @@
 .product-table {
   .ant-table-cell {
     padding: 10px 5px !important;
-    .ant-table-expanded-row-fixed { 
-      margin: -10px !important
+    .ant-table-expanded-row-fixed {
+      margin: -10px !important;
     }
   }
   .product-item-note-input {
@@ -332,5 +332,42 @@
 .modal-product-list {
   .custom-table-pagination {
     padding: 20px 0px;
+  }
+}
+
+.row-view {
+  display: flex;
+  width: 100%;
+  &-title {
+    min-width: 70px;
+    width: 30%;
+    flex-wrap: wrap;
+    line-height: 16px;
+    color: #737373;
+    margin-right: 16px;
+  }
+  &-hash-tag {
+    margin-top: 10px;
+    padding: 5px 10px;
+    background: #f5f5f5;
+    border-radius: 100px;
+    color: #737373;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+    margin-right: 10px;
+  }
+  &-result {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    color: #222222;
+    display: flex;
+    &-id {
+      color: #2a2a86;
+    }
+    &-empty {
+      color: #e24343;
+    }
   }
 }
