fix css, fix form setting -> them moi nguon don hang, add constants

--- a/src/assets/css/_overwrite.scss
+++ b/src/assets/css/_overwrite.scss
@@ -170,6 +170,7 @@
                   height: 40px;
                   line-height: 40px;
                   color: rgba($white, $alpha: 0.5);
+                  margin-bottom: 1px;
                   a,
                   .ant-menu-item-icon {
                     color: rgba($white, $alpha: 0.5);
