--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -1195,6 +1195,40 @@
 }
 
 .orders-update-shipment {
+  .ant-card-body{
+    .ant-collapse-header{
+      .order-shipment-dot{
+        position: relative;
+        margin-left: 20px;
+        &::before{
+          position: absolute;
+          content: "";
+          width: 14px;
+          height:14px;
+          top:6px;
+          left: -18px;
+          background-color: #E5E5E5;
+          border-radius: 50%;
+         } 
+      }
+      .order-shipment-dot-active{
+        position: relative;
+        margin-left: 20px;
+        &::before{
+          position: absolute;
+          content: "";
+          width: 14px;
+          height:14px;
+          top:6px;
+          left: -18px;
+          background-color: #27ae60;
+          border-radius: 50%;
+         } 
+      }
+    }  
+
+   
+  }
   .ant-card-head {
     border: none;
     .ant-card-head-wrapper {
