--- a/src/assets/css/_overwrite.scss
+++ b/src/assets/css/_overwrite.scss
@@ -321,6 +321,17 @@
         }
       }
     }
+    &-default {
+      color: $text-body-color;
+      border-color: $gray-e5;
+      background-color: $gray-f5;
+      &:hover,
+      &:focus {
+        color: $white;
+        background-color: $primary-color;
+        border-color: $primary-color;
+      }
+    }
   }
   //Card
   &-card {
@@ -608,7 +619,7 @@
       //   background-color: rgba($background-color-secondary, 0.5);
       // }
       & > tr.ant-table-row-selected > td {
-        background-color: inherit;
+        // background-color: inherit;
       }
     }
     @for $i from 1 through 5 {
@@ -829,6 +840,18 @@
       color: #2a2a86;
       font-weight: 500;
       font-size: 14px;
+    }
+  }
+  //drawer
+  &-drawer {
+    .ant-drawer-content-wrapper {
+      .ant-drawer-content {
+        .ant-drawer-wrapper-body {
+          .ant-drawer-header {
+            background-color: $gray-f5;
+          }
+        }
+      }
     }
   }
 }
