--- a/src/assets/css/_table.scss
+++ b/src/assets/css/_table.scss
@@ -10,7 +10,7 @@
       box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.1);
       > tr > th {
         padding: 11px 15px;
-        background: none;
+        // background: none;
         color: #222;
       }
     }
