--- a/src/assets/css/_overwrite.scss
+++ b/src/assets/css/_overwrite.scss
@@ -542,6 +542,13 @@
       background-color: rgba(42, 42, 134, 0.05);
       color: $text-muted;
     }
+    &.primary {
+      .ant-tag-close-icon {
+        color: white;
+      }
+      background-color: $primary-color;
+      color: $white;
+    }
   }
   //Drawer
   &-drawer {
