bỏ hiển thị cột sđt, format lại cột ngày nhận hàng

--- a/src/screens/purchase-order/purchase-order-list.scss
+++ b/src/screens/purchase-order/purchase-order-list.scss
@@ -27,4 +27,9 @@
       background-color: $white;
     }
   }
+  .tag-custom {
+    width: 120px;
+    text-align: center;
+    white-space: unset;
+  }
 }
