--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -1614,6 +1614,11 @@
 
   .orders-shipment-item-view{
     padding: 0 24px;
+    &:last-child{
+      .orders-shipment-item-view-wrap{
+        border-bottom: none;
+      }
+    }
     .orders-shipment-item-view-wrap{
     width: 100%;
     display: flex;
@@ -1624,23 +1629,26 @@
       display: flex;
     }
     }
-    
   }
 }
+
 .orders-screen-custom-tags{
   display: flex;
-  justify-content: flex-start;
   flex-wrap: wrap;
   border: 1px solid #d9d9d9;
   border-radius: 5px;
-  padding: 10px;
+  padding: 2px 14px;
+  min-height: 40px;
+  &:hover{
+    border: 1px solid #2a2a86;
+  }
   input{
     border: none;
     outline: none;
-    width: 100%;
     color: #222222;
     line-height: 1;
     margin: 2px 0;
+    flex: 1;
     &::-webkit-input-placeholder{
       font-size: 14px;
       color: #b4b4b4;
@@ -1648,29 +1656,24 @@
   }
   div{
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height:25px;
-    text-align:center;
     background-color: #F5F5F5;
     border-radius: 3px;
     color: #737373;
     margin: 2px;
-    flex: 1;
-    padding: 2px 10px;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-    img{
+    padding: 5px 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    &>img{
+      display: block;
       width: 14px;
       cursor: pointer;
-      margin-left: 1px;
+      margin-left: 3px;
     }
     span{
-      width: 100%;
-      text-align: center;
-      flex:1;
-      word-wrap: break-word !important;
-      overflow-wrap: break-word;
+      display: block;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 }
