--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -1000,6 +1000,21 @@
   .ant-modal-header {
     padding: 27px 27.5px 21px 30px;
   }
+  .orders-cancel-option{
+    width: 100%;
+    .ant-select{
+      margin: 0;
+      width: 150px;
+      margin-left: 50px;
+      .ant-select-selector{
+        margin: 0;
+        outline: none;
+        border: 1px solid #E5E5E5;
+        background: #FFFFFF;
+      }
+    }
+   
+  }
   .ant-modal-title {
     & > div {
       display: flex;
