--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -1327,6 +1327,9 @@
           }
         }
       }
+      .saleorder-header-content__info {
+        align-items: center;
+      }
     }
   }
   .ant-card-head {
