Customer feature fix

--- a/src/screens/customer/customer.scss
+++ b/src/screens/customer/customer.scss
@@ -84,3 +84,28 @@
 //     justify-content: flex-end;
 //   }
   
+.customer-contact-collapse{
+    .ant-collapse-header{
+        height: 56px;
+        display: flex;
+        position: relative;
+        margin-left: 20px;
+        &::before {
+            position: absolute;
+            content: "";
+            width: 8px;
+            height: 8px;
+            background-color: #fcaf17;
+            border-radius: 50%;
+            top: 23px;
+            left: 8px;
+        }
+       &>span{
+            &:last-child{
+                color: #222222;
+                
+            }
+        }
+    }
+    
+}
