--- a/src/assets/css/_po.scss
+++ b/src/assets/css/_po.scss
@@ -474,5 +474,30 @@
     vertical-align: middle;
     font-size: 5px;
     color: #c4c4c4;
+    &.partial {
+      color: #fcaf17;
+    }
+    &.success {
+      color: $green;
+    }
+  }
+  .po-tag {
+    font-size: 12px;
+    font-weight: 500;
+    margin-top: 0px;
+    margin-bottom: 4px;
+    border-radius: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    background-color: rgba(102, 102, 102, 0.1);
+    color: "rgb(102, 102, 102)";
+  }
+  .po-tag-success {
+    background-color: rgba(39, 174, 96, 0.1);
+    color: #27ae60;
+  }
+  .po-tag-warning {
+    background-color: #fff7e6;
+    color: #fa8c16;
   }
 }
