list order and filter order

--- a/src/component/filter/order.filter.scss
+++ b/src/component/filter/order.filter.scss
@@ -12,3 +12,53 @@
     }
   }
 }
+.order-filter {
+  .page-filter {
+    .page-filter-heading {
+      width: 100%;
+      display: inline-flex;
+      justify-content: space-between;
+      .page-filter-left {
+        width: 8%;
+        min-width: 100px;
+      }
+      .page-filter-right {
+        width: 88%;
+        .ant-space.ant-space-horizontal {
+          width: 100%;
+          .ant-space-item {
+            width: 100%;
+            .ant-form.ant-form-inline {
+              display: flex;
+              justify-content: space-between;
+              .ant-form-item {
+                margin-right: 0;
+
+              }
+              @media screen and (min-width: 1400px) {
+                .input-search {
+                  width: 70%;
+                }
+              }
+              @media screen and (max-width: 1399px) {
+                .input-search {
+                  width: 60%;
+                }
+              }
+              @media screen and (max-width: 1099px) {
+                .input-search {
+                  width: 50%;
+                }
+              }
+              @media screen and (max-width: 799px) {
+                .input-search {
+                  width: 40%;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
