--- a/src/screens/customer/customer.scss
+++ b/src/screens/customer/customer.scss
@@ -123,5 +123,37 @@
      
     }
   }
-  
+  .ant-table-body{
+    .ant-table-tbody > tr > td {
+      padding: 10px !important;
+    }
+    &::-webkit-scrollbar {
+      // width: 12px;
+      height: 8px;
+      background-color: rgba(79, 104, 125, 0.4);
+    }
+    
+    /* Track */
+    &::-webkit-scrollbar-track {
+      background: #f1f1f1;
+      border-radius: 4px !important;
+    }
+    
+    /* Handle */
+    &::-webkit-scrollbar-thumb {
+      border-radius: 4px !important;
+      background-color: rgba(151, 151, 151, 0.4);
+    }
+    
+    /* Handle on hover */
+    &::-webkit-scrollbar-thumb:hover {
+      background-color: rgba(0,0,0,.35);
+      border-radius: 4px !important;
+    }
+  }
+ 
+}
+
+.ant-drawer-content-wrapper{
+  width: 380px !important;
 }
