--- a/src/screens/customer/customer.scss
+++ b/src/screens/customer/customer.scss
@@ -80,7 +80,7 @@
 
 .customer-information-card {
   .ant-collapse-header {
-    padding: 0 !important;
+    padding: 0 24px!important;
   }
   .ant-collapse-content-box {
     padding: 12px 0;
