update mẫu in ghép api, fix layout

--- a/src/assets/css/_overwrite.scss
+++ b/src/assets/css/_overwrite.scss
@@ -729,6 +729,8 @@
   }
   //Modal
   &-modal {
+    max-height: 80%;
+    overflow: auto;
     &-header {
       border-radius: 5px 5px 0 0;
       &-nostyle {
