customer request update info fix

--- a/src/screens/customer/customer.scss
+++ b/src/screens/customer/customer.scss
@@ -131,7 +131,7 @@
       -webkit-box-orient: vertical;
     }
     .ant-table-tbody > tr > td {
-      padding: 10px !important;
+      padding: 10px 15px !important;
       
     }
     &::-webkit-scrollbar {
@@ -166,7 +166,7 @@
 
 .customer-group-table{
   .ant-table-tbody > tr > td {
-    padding: 10px !important;
+    padding: 10px 15px !important;
     
   }
 }
