--- a/src/assets/css/_overwrite.scss
+++ b/src/assets/css/_overwrite.scss
@@ -342,6 +342,17 @@
           border-color: $primary-color;
         }
       }
+      &.danger {
+        background-color: #e24343;
+        border-color: #e24343;
+        color: $white;
+        &:hover,
+        &:focus,
+        &.active {
+          color: $white;
+          border-color: #e24343;
+        }
+      }
     }
   }
   //Card
