update filter order, list order

--- a/src/component/filter/order.filter.scss
+++ b/src/component/filter/order.filter.scss
@@ -62,8 +62,12 @@
       }
     }
   }
-  
-  
+}
+.order-filter-tags {
+  .tag {
+    padding: 10px 5px;
+    margin-bottom: 20px;
+  }
 }
 
 .custom-table {
