làm giao diện cấu hình (chưa được) + fix bug mẫu in

--- a/src/assets/css/_overwrite.scss
+++ b/src/assets/css/_overwrite.scss
@@ -742,6 +742,7 @@
   &-modal {
     max-height: 80%;
     overflow: auto;
+    padding: 0;
     &-header {
       border-radius: 5px 5px 0 0;
       &-nostyle {
