--- a/src/component/filter/order.filter.scss
+++ b/src/component/filter/order.filter.scss
@@ -12,7 +12,29 @@
     }
   }
 }
-
+.order-options {
+  border-bottom: 1px solid #5252;
+  .ant-radio-group {
+    .ant-radio-button-wrapper{
+      border-style: none;
+      border-width: 0;
+      box-shadow: none;
+      height: 40px;
+    }
+    .ant-radio-button-wrapper:first-child {
+      border-left: none;
+      border-radius: none;
+    }
+    .ant-radio-button-wrapper:not(:first-child):before {
+      width: 0;
+      
+    }
+    .ant-radio-button-wrapper-checked {
+      color: #2a2a86;
+      border-bottom: 2px solid #2a2a86;
+    }
+  }
+}
 .order-filter {
   .page-filter {
     .page-filter-heading {
