--- a/src/assets/css/_po.scss
+++ b/src/assets/css/_po.scss
@@ -501,3 +501,11 @@
     color: #fa8c16;
   }
 }
+
+.po-filter {
+  .ant-collapse-item-active {
+    .ant-collapse-header {
+      background-color: #EFEFFC;
+    }
+  }
+}
