--- a/src/assets/css/_page-filter.scss
+++ b/src/assets/css/_page-filter.scss
@@ -38,3 +38,16 @@
     }
   }
 }
+
+.button-select:focus {
+  &:focus {
+    color: #37394d;
+    border-color: #e5e5e5;
+    background-color: #f5f5f5;
+  }
+  &.active {
+    color: $white;
+    background-color: $primary-color;
+    border-color: $primary-color;
+  }
+}
